Fix blog pagina horizontale overflow

--- a/slideshow.css
+++ b/slideshow.css
@@ -1,5 +1,3 @@
-* {box-sizing:border-box}
-
 .slideshow-container {
   position: relative;
   margin: 0;
