--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+* {box-sizing:border-box}
 body
 {
   font-family: 'Roboto Condensed', sans-serif;
